--- a/new.html
+++ b/new.html
@@ -1,6 +1,8 @@
-<head>
-    Good head is godhead.
-</head>
-<body>
-    tHIS iS a bAD sENTENCE i wANT tO fIX;
-</body>
+<html>
+    <head>
+        Good head is godhead.
+    </head>
+    <body>
+        tHIS iS a bAD sENTENCE i wANT tO fIX;
+    </body>
+</html>
